feat：switchTab pages

--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -12,6 +12,10 @@
     <noscript>
       <div>Please enable JavaScript to use this application.</div>
     </noscript>
+    <script
+      type="text/javascript"
+      src="https://res.wx.qq.com/open/js/jweixin-1.6.2.js"
+    ></script>
     <script>
       ;(function () {
         const prefersDark =
